Refactored, compiles.